# Add all samples
add_subdirectory(adc)
add_subdirectory(blink)
add_subdirectory(can)
add_subdirectory(echo)
add_subdirectory(gpio_interrupt)
add_subdirectory(i2c)
add_subdirectory(iwdg)
add_subdirectory(pwm)
add_subdirectory(queue)
add_subdirectory(read_write)
add_subdirectory(rtc)
add_subdirectory(rtc_timer)
add_subdirectory(timer)
