# Add all samples
add_subdirectory(adc)
add_subdirectory(blink)
add_subdirectory(can)
add_subdirectory(canopen)
add_subdirectory(echo)
add_subdirectory(eeprom)
add_subdirectory(gpio_interrupt)
add_subdirectory(i2c)
add_subdirectory(iwdg)
add_subdirectory(log)
add_subdirectory(pwm)
add_subdirectory(queue)
add_subdirectory(read_write)
add_subdirectory(rtc)
add_subdirectory(rtc_timer)
add_subdirectory(thermistor)
add_subdirectory(timer)
add_subdirectory(spi)
