# Add all samples
add_subdirectory(adc)
add_subdirectory(blink)
add_subdirectory(button)
add_subdirectory(button_debounce)
add_subdirectory(can)
add_subdirectory(canopen)
add_subdirectory(echo)
add_subdirectory(eeprom)
add_subdirectory(encoder)
add_subdirectory(gpio_interrupt)
add_subdirectory(hal_print)
add_subdirectory(i2c)
add_subdirectory(iwdg)
add_subdirectory(lcd)
add_subdirectory(log)
add_subdirectory(millis)
add_subdirectory(pwm)
add_subdirectory(queue)
add_subdirectory(read_write)
add_subdirectory(rtc)
add_subdirectory(rtc_timer)
add_subdirectory(rtos)
add_subdirectory(thermistor)
add_subdirectory(timer)
add_subdirectory(spi)
